# de_zoomcamp

./: .gitignore  README.md  changelog.md
01-gcp-docker-terraform/homework/terraform/: variables.tf
02-workflow-orchestration/airflow_and_homework/: Dockerfile  docker-compose.yaml  homework_week_2.md
03-data-warehouse/: docker-compose.yaml  homework_w3.md
03-data-warehouse/dags/: data_warehouse_hw_etl.py  gcp_operations.py  ingest_data.py  transform_data.py
04-analytics-engineering/taxi_rides_ny/: dbt_project.yml
04-analytics-engineering/taxi_rides_ny_fhv/: dbt_project.yml
05-batch/: 04_spark.ipynb  05_taxi_schema.ipynb  06_spark_sql.ipynb  07_group_by_join.ipynb  08_rdds.ipynb  09_spark_gcs.ipynb  10_local_spark_cluster.ipynb  11_spark_sql_bigquery.py  download_data.sh  homework_w5.md  homework_week5.ipynb
05-batch/code/: 10_local_spark_cluster.py  11_spark_sql_bigquery.py
06-streaming/homework/: pyproject.toml
06-streaming/homework/kafka_pyspark/: pyspark_consumer.ipynb  send_test_topic_message.py  send_trip_data.py
06-streaming/java_kafka/: build.gradle
06-streaming/python_kafka/: pyproject.toml
06-streaming/python_kafka/avro_example/: producer.py
06-streaming/python_kafka/example_from_json/: consumer.py  producer.py  ride.py
06-streaming/python_kafka/stream_example/pyspark/: settings.py  streaming_notebook.ipynb
week_1/homework/: homework.md  homework_week_1.md
week_1/homework/docker/: Dockerfile  (+3 more)
week_2/airflow_and_homework/: commands
week_2/docker_compose_for_airflow/: docker-compose.yaml
workshop-02-risingwave/: homework.sql
(+32 files in other folders)
