[tool.poetry]
name = "python-kafka"
version = "0.1.0"
description = ""
authors = ["Lily Chau <chauyeeki@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.18"
kafka-python = "1.4.6"
confluent-kafka = "^2.3.0"
requests = "^2.31.0"
avro = "^1.11.3"
faust = "^1.10.4"
fastavro = "^1.9.4"
pyspark = "3.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
